hphp/test/zend/good/ext/mysqli/tests/mysqli_driver_unclonable.php.expectf

Fatal error: Trying to clone an uncloneable object of class mysqli_result in %s/mysqli_driver_unclonable.php on line 3
